--- a/header.css
+++ b/header.css
@@ -1,22 +1,8 @@
-@import url("style/header.css");
-.cabeçalho__menu-hamburguer{
-    width: 24px;
-    height: 24px;
-    background-image: url ("../img/Menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-
-    display: inline-block;
-}
 :root{
     --cor-de-fundo:#ebecee;
     --branco:#FFFFFF;
-}
-.cabeçalho{
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
 }
 .container{
     display: flex;
@@ -24,4 +10,34 @@
 }
 .container__imagem{
     padding: 1em;
+}
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+.container__botao:checked ~ .lista-menu{
+    display: block;
+}
+.lista-menu__titulo {
+    color: var(--laranja);
+}    
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+} 
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+.cabeçalho{
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
