--- a/header.css
+++ b/header.css
@@ -1,8 +1,9 @@
 :root{
-    --cor-de-fundo:#ebecee;
-    --branco:#FFFFFF;
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "poppins";
 }
 .container{
     display: flex;
@@ -17,11 +18,12 @@
     top: 100%;
     width: 60vw;
 }
-.container__botao:checked ~ .lista-menu{
+.container__botao:checked{
     display: block;
 }
 .lista-menu__titulo {
     color: var(--laranja);
+    font-weight: 700;
 }    
 .lista-menu__item {
     padding: 1em;
@@ -40,4 +42,8 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+}
+
+.container__botao{
+    display: none;
 }
