--- a/style/header.css
+++ b/style/header.css
@@ -1,8 +1,8 @@
-.container{
+.container {
     display: flex;
     align-items: center;
 }
-.container__imagem{
+.container__imagem {
     padding: 1em;
 }
 .lista-menu {
@@ -11,25 +11,25 @@
     top: 100%;
     width: 60vw;
 }
-.container__botao:checked{
+.container_botao:checked ~ .lista-menu {
     display: block;
 }
-.lista-menu__titulo {
+.lista-menu_titulo {
     color: var(--laranja);
     font-weight: 700;
 }    
-.lista-menu__item {
+.lista-menu_item {
     padding: 1em;
     background-color: var(--branco);
 } 
-.lista-menu__link {
+.lista-menu_link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
 }
-.cabeçalho{
+.cabeçalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
@@ -37,6 +37,14 @@
     position: relative;
 }
 
-.container__botao{
+.container_botao {
     display: none;
+}
+.cabeçalho_menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    background-image: url("../Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
 }
