--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
-@import url("styles/header.css");
-@import url("styles/banner.css");
-@import url("styles/carrossel.css");
+@import url(header.css);
+@import url(banner.css);
+@import url(carrosel.css);
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
@@ -18,14 +18,6 @@ body {
 h1{
     background-color:white;
 }
-.cabeçalho__menu-hamburguer{
-    width: 24px;
-    height: 24px;
-    background-image: url ("./");
-    background-repeat: no-repeat;
-    background-position: center;
 
-    display: inline-block;
-}
 
 
